<resources>
    <string name="app_name">AdapterBasedVIewWithDelegation</string>
    <string name="action_settings">Settings</string>
    <string name="dubai_title">DUBAI</string>
    <string name="date_and_time">Apr 3, 12 pm - Apr 6, 12 pm</string>
    <string name="lbl_lowest_price">LOWEST PRICE</string>
    <string name="lbl_distance">DISTANCE</string>
    <string name="lbl_recommended">RECOMMEDED</string>
    <string name="price">C$36</string>
    <string name="avis">AVIS</string>
    <string name="economy">Economy</string>
    <string name="chev_spark">Chevrolet Spark</string>
    <string name="no_of_person">4</string>
    <string name="no_of_work">1</string>
    <string name="no_of_doors">4</string>
    <string name="apr_3_12_pm">Apr 3, 12pm</string>
    <string name="pick_up">Pick-up</string>
    <string name="apr_6_12_pm">Apr 6, 12pm</string>
    <string name="drop_off">Drop-off</string>
    <string name="non_air_port">Non Airport </string>
    <string name="taxes_and_fees"> <b>C$31 - C$1,417</b> per day, incl. taxes &amp; fees</string>
    <string name="btn_lbl">Select Filters</string>
    <string name="audi_a5">Audi A5</string>
    <string name="luxury_car_type">Luxury Car</string>
    <string name="audi_a5_sportback_or_similar">Audi A5 Sport back or similar</string>
    <string name="april_3_to_6">Apr 3, 12pm - Apr 6,12pm</string>
    <string name="price_include_tax">$1,417</string>
    <string name="cad_per_day">CAD per day \n incl. taxes &amp; fees</string>
    <string name="btn_book_lbl">Book</string>
    <string name="offer_details">Offer Details</string>
    <string name="automatics">Automatic</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="convertable">Convertable</string>
</resources>
